--- a/newproject/.gitattributes
+++ b/newproject/.gitattributes
@@ -1,1 +1,3 @@
 newproject/knowledge_base.db filter=lfs diff=lfs merge=lfs -text
+knowledge.db filter=lfs diff=lfs merge=lfs -text
+knowledge_base.db filter=lfs diff=lfs merge=lfs -text
